@@ -1,5 +1,10 @@
 2004-09-23  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/javalib/java/security/KeyFactorySpi.java:
+        Replaced by implementation from GNU Classpath.
+
+2004-09-23  Dalibor Topic  <robilad@kaffe.org>
+
 	* libraries/javalib/java/security/AlgorithmParametersSpi.java:
         Replaced by implementation from GNU Classpath.
 
